force-app/main/default/objects/Gong_Processing_Result__c/Gong_Processing_Result__c.object-meta.xml
<CustomObject>
    <description>Individual proposed action from Gong email processing - one record per email per activity</description>
    <label>Gong Processing Result</label>
    <nameField>
        <displayFormat>GPR-{000000}</displayFormat>
        <label>Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Processing Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>