force-app/main/default/objects/Gong_Processing_Result__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gong Processing Results</relationshipLabel>
    <relationshipName>Gong_Processing_Results</relationshipName>
    <type>Lookup</type>
</CustomField>