force-app/main/default/objects/Gong_Processing_Result__c/fields/Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Activity_Id__c</fullName>
    <label>Activity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>