force-app/main/default/objects/Gong_Processing_Result__c/fields/Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>Activity_Subject__c</fullName>
    <label>Activity Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>