force-app/main/default/objects/Gong_Processing_Result__c/fields/AI_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis__c</fullName>
    <label>AI Analysis</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>