force-app/main/default/objects/Gong_Processing_Result__c/fields/AI_Cleaned_First_Name__c.field-meta.xml
<CustomField>
    <fullName>AI_Cleaned_First_Name__c</fullName>
    <label>AI Cleaned First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>