force-app/main/default/objects/Gong_Processing_Result__c/fields/AI_Is_Real_Contact__c.field-meta.xml
<CustomField>
    <fullName>AI_Is_Real_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Is Real Contact</label>
    <type>Checkbox</type>
</CustomField>