force-app/main/default/objects/Gong_Processing_Result__c/fields/AI_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Quality_Score__c</fullName>
    <label>AI Quality Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>