force-app/main/default/objects/Gong_Processing_Result__c/fields/Gong_Processing_Run__c.field-meta.xml
<CustomField>
    <fullName>Gong_Processing_Run__c</fullName>
    <label>Gong Processing Run</label>
    <referenceTo>Gong_Processing_Run__c</referenceTo>
    <relationshipLabel>Gong Processing Results</relationshipLabel>
    <relationshipName>Gong_Processing_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>