force-app/main/default/objects/Gong_Processing_Result__c/fields/Matched_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Id__c</fullName>
    <label>Matched Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>