force-app/main/default/objects/Gong_Processing_Result__c/fields/Matched_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Name__c</fullName>
    <label>Matched Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>