force-app/main/default/objects/Gong_Processing_Result__c/fields/Matched_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Type__c</fullName>
    <label>Matched Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>