force-app/main/default/objects/Gong_Processing_Result__c/fields/Original_Email__c.field-meta.xml
<CustomField>
    <fullName>Original_Email__c</fullName>
    <label>Original Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>