force-app/main/default/objects/Gong_Processing_Result__c/fields/Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Result_Type__c</fullName>
    <label>Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contact</fullName>
            </value>
            <value>
                <fullName>Link to Contact</fullName>
            </value>
            <value>
                <fullName>Link to Lead</fullName>
            </value>
            <value>
                <fullName>Free Email Excluded</fullName>
            </value>
            <value>
                <fullName>Invalid Email</fullName>
            </value>
            <value>
                <fullName>Internal Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>