force-app/main/default/objects/Gong_Processing_Result__c/listViews/All_Results.listView-meta.xml
<ListView>
    <fullName>All_Results</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Result_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Domain__c</columns>
    <columns>Account__c</columns>
    <columns>Matched_Record_Name__c</columns>
    <columns>AI_Quality_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Results</label>
</ListView>