force-app/main/default/objects/Gong_Processing_Result__c/listViews/Approved_Ready_To_Apply.listView-meta.xml
<ListView>
    <fullName>Approved_Ready_To_Apply</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>AI_Cleaned_First_Name__c</columns>
    <columns>AI_Cleaned_Last_Name__c</columns>
    <columns>Result_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Activity_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved - Ready to Apply</label>
</ListView>