force-app/main/default/objects/Gong_Processing_Result__c/listViews/New_Contacts_Pending.listView-meta.xml
<ListView>
    <fullName>New_Contacts_Pending</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>AI_Cleaned_First_Name__c</columns>
    <columns>AI_Cleaned_Last_Name__c</columns>
    <columns>AI_Quality_Score__c</columns>
    <columns>AI_Is_Real_Contact__c</columns>
    <columns>AI_Analysis__c</columns>
    <columns>Domain__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Result_Type__c</field>
        <operation>equals</operation>
        <value>New Contact</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </filters>
    <label>New Contacts - Pending</label>
</ListView>